--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}        <link rel="stylesheet" href="build/css/app.css">
+        <script src="build/js/app.js"></script>
+
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+{% block javascripts %}
+           {{ encore_entry_script_tags('app') }}
+{% endblock %}
     </body>
 </html>
