--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
-        {% endblock %}        <link rel="stylesheet" href="build/css/app.css">
-        <script src="build/js/app.js"></script>
+        {% endblock %}
 
     </head>
     <body>
