--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>Bienvenue sur Wild Series</h1>
+    <div class="container">
+
+        <h1>Bienvenue sur Wild Series</h1>
+    </div>
 {% endblock %}
