ajout navbar et modif couleurs de base de bootstrap

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,6 +2,6 @@
 {% block body %}
     <div class="container">
 
-        <h1>Bienvenue sur Wild Series</h1>
+        <h1 class="text-secondary">Bienvenue sur Wild Series</h1>
     </div>
 {% endblock %}
