--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,6 @@
+$theme-colors: (
+        "primary": #455a64,
+        "secondary": #2962ff
+);
+
 @import "~bootstrap/scss/bootstrap";
-body {
-    background-color: aliceblue;
-}
