--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,9 @@
 
     </head>
     <body>
+    <header>
+        {% include "navbar.html.twig" %}
+    </header>
         {% block body %}{% endblock %}
 {% block javascripts %}
            {{ encore_entry_script_tags('app') }}
