--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -3,5 +3,13 @@
     <div class="container">
 
         <h1 class="text-secondary">Bienvenue sur Wild Series</h1>
+        <a href="{{ path('wild_show', { 'slug': "walking-dead" }) }}">
+            Testing show() method from WildController with a real program s slug.
+        </a>
+        <br>
+        <a href="{{ path('wild_index') }}">
+            Testing index() method from WildController to view all programs.
+        </a>
+
     </div>
 {% endblock %}
