ajout category page avec fetch category

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,6 +10,10 @@
         <a href="{{ path('wild_index') }}">
             Testing index() method from WildController to view all programs.
         </a>
+        <br>
+        <a href="{{ path('wild_show_category', { 'categoryName': "horreur" }) }}">
+            Testing showByCategory() method from WildController to view all programs by category.
+        </a>
 
     </div>
 {% endblock %}
