--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         {% block stylesheets %}
         {% endblock %}
         {{ encore_entry_link_tags('app') }}
-
+        <link href="https://fonts.googleapis.com/css?family=Taviraj|Work+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
     <header>
