ajout page qui détail une saison

--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -8,7 +8,10 @@
                 <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
                 <p>{{ program.summary }}</p>
                 {# , {slug: program.title} #}
-                <p><a href="{{ path('wild_show') }}">Voir la fiche</a></p>
+                <p>
+                    <a href="{{ path('wild_show', {slug: program.title|lower|replace({' ': '-'})}) }}" class="btn btn-primary">Voir la fiche</a>
+                    <a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}" class="btn btn-secondary">Voir les saisons</a>
+                </p>
             </div>
         {% else %}
             Aucune série trouvée.
