--- a/templates/wild/season.html.twig
+++ b/templates/wild/season.html.twig
@@ -9,9 +9,12 @@
                 <div class="card-body">
                     <h4>{{ episode.title }}</h4>
                     <p>{{ episode.synopsis }}</p>
+                    <p><a href="{{ path('wild_show_episode', {'id' : episode.id}) }}" class="btn btn-primary"> Voir
+                            l'épisode</a></p>
                 </div>
             </div>
         {% endfor %}
-        <p><a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}">Retour au saisons</a></p>
+        <p><a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}">Retour au
+                saisons</a></p>
     </div>
 {% endblock %}
