--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -2,6 +2,11 @@
 {% block title %}All programs{% endblock %}
 {% block body %}
     <div class="container">
+        <h1>Faire une recherche</h1>
+        {{ form_start(form) }}
+        {{ form_row(form.searchField) }}
+        <button type="submit" name="btnSearch" class="btn btn-primary">Rechercher</button>
+        {{ form_end(form) }}
         <h1>Toutes les séries de la table program : </h1>
         {% for program in programs %}
             <div>
@@ -9,8 +14,10 @@
                 <p>{{ program.summary }}</p>
                 {# , {slug: program.title} #}
                 <p>
-                    <a href="{{ path('wild_show', {slug: program.title|lower|replace({' ': '-'})}) }}" class="btn btn-primary">Voir la fiche</a>
-                    <a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}" class="btn btn-secondary">Voir les saisons</a>
+                    <a href="{{ path('wild_show', {slug: program.title|lower|replace({' ': '-'})}) }}"
+                       class="btn btn-primary">Voir la fiche</a>
+                    <a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}"
+                       class="btn btn-secondary">Voir les saisons</a>
                 </p>
             </div>
         {% else %}
