ajout crud season

--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -24,7 +24,7 @@
                     <td>{{ program.poster }}</td>
                     <td>
                         <a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-primary">show</a>
-                        <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-dark">edit</a>
+                        <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-secondary">edit</a>
                     </td>
                 </tr>
             {% else %}
