ajout crud episode

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -14,6 +14,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('wild_index') }}">Programs</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('program_index') }}">Series</a>
+                </li>
             </ul>
         </div>
     </div>
