ajout lien demonstration sur readme.md

--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Episode index</h1>
 
+    <a href="{{ path('episode_new') }}" class="btn btn-secondary">Create new</a>
     <table class="table">
         <thead>
             <tr>
@@ -35,5 +36,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('episode_new') }}">Create new</a>
 {% endblock %}
