--- a/templates/category/add.html.twig
+++ b/templates/category/add.html.twig
@@ -14,6 +14,8 @@
         <ul>
             {% for category in categories %}
                 <li>{{ category.name }}</li>
+                <a href="{{ path('category_show', {'id': category.id}) }}" class="btn btn-primary">show</a>
+                <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-secondary">edit</a>
             {% endfor %}
         </ul>
         </p>
