ajout page actor

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,5 +6,8 @@ $theme-colors: (
 $headings-font-family:        'Work Sans', sans-serif !default;
 $font-family-sans-serif:      'Taviraj', serif, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
+.actor-name{
+  text-decoration: underline;
+}
 
 @import "~bootstrap/scss/bootstrap";
