--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -31,4 +31,15 @@
     <a href="{{ path('program_edit', {'id': program.id}) }}">edit</a>
 
     {{ include('program/_delete_form.html.twig') }}
+
+    <strong>Acteur :</strong>
+    <ul class="list-group">
+        {% for actor in program.actors %}
+            <li class="list-group-item">{{ actor.name }} <a href="{{ path('wild_show_actor', {id: actor.id}) }}" class="btn btn-primary stretched-link">fiche acteur</a></li>
+        {% else %}
+            <li class="list-group-item">Aucun acteur pour cette série</li>
+        {% endfor %}
+    </ul>
+
+
 {% endblock %}
