--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Program index{% endblock %}
 
 {% block body %}
-        <h1>Program index</h1>
-
+    <h1>Program index</h1>
+    <div class="table-responsive-lxl">
         <table class="table">
             <thead>
             <tr>
@@ -21,7 +21,7 @@
                     <td>{{ program.id }}</td>
                     <td>{{ program.title }}</td>
                     <td>{{ program.summary }}</td>
-                    <td>{{ program.poster }}</td>
+                    <td class="text-break">{{ program.poster }}</td>
                     <td>
                         <a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-primary">show</a>
                         <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-secondary">edit</a>
@@ -34,7 +34,9 @@
             {% endfor %}
             </tbody>
         </table>
+    </div>
 
-        <a href="{{ path('program_new') }}" class="btn btn-info">Create new</a>
+
+    <a href="{{ path('program_new') }}" class="btn btn-info">Create new</a>
 
 {% endblock %}
