--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>Category</h1>
+    <div class="container">
+        <h1>Category</h1>
 
-    <table class="table">
-        <tbody>
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ category.id }}</td>
@@ -15,11 +16,12 @@
                 <th>Name</th>
                 <td>{{ category.name }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a href="{{ path('category_add') }}">back to list</a>
+        <a href="{{ path('category_add') }}">back to list</a>
 
 
-    {{ include('category/_delete_form.html.twig') }}
+        {{ include('category/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
