--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit Episode{% endblock %}
 
 {% block body %}
-    <h1>Edit Episode</h1>
+    <div class="container">
+        <h1>Edit Episode</h1>
 
-    {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('episode_index') }}">back to list</a>
+        <a href="{{ path('episode_index') }}">back to list</a>
 
-    {{ include('episode/_delete_form.html.twig') }}
+        {{ include('episode/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
