--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -3,37 +3,41 @@
 {% block title %}Episode index{% endblock %}
 
 {% block body %}
-    <h1>Episode index</h1>
+    <div class="container">
+        <h1>Episode index</h1>
 
-    <a href="{{ path('episode_new') }}" class="btn btn-secondary">Create new</a>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Number</th>
-                <th>Synopsis</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for episode in episodes %}
-            <tr>
-                <td>{{ episode.id }}</td>
-                <td>{{ episode.title }}</td>
-                <td>{{ episode.number }}</td>
-                <td>{{ episode.synopsis }}</td>
-                <td>
-                    <a href="{{ path('episode_show', {'id': episode.id}) }}">show</a>
-                    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <a href="{{ path('episode_new') }}" class="btn btn-secondary">Create new</a>
+        <div class="table-responsive-lxl">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Number</th>
+                    <th>Synopsis</th>
+                    <th>actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for episode in episodes %}
+                    <tr>
+                        <td>{{ episode.id }}</td>
+                        <td>{{ episode.title }}</td>
+                        <td>{{ episode.number }}</td>
+                        <td>{{ episode.synopsis }}</td>
+                        <td>
+                            <a href="{{ path('episode_show', {'id': episode.id}) }}" class="btn btn-primary">show</a>
+                            <a href="{{ path('episode_edit', {'id': episode.id}) }}" class="btn btn-secondary">edit</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
