--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Episode{% endblock %}
 
 {% block body %}
-    <h1>Episode</h1>
+    <div class="container">
+        <h1>Episode</h1>
 
-    <table class="table">
-        <tbody>
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ episode.id }}</td>
@@ -23,12 +24,13 @@
                 <th>Synopsis</th>
                 <td>{{ episode.synopsis }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a href="{{ path('episode_index') }}">back to list</a>
+        <a href="{{ path('episode_index') }}">back to list</a>
 
-    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
+        <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
 
-    {{ include('episode/_delete_form.html.twig') }}
+        {{ include('episode/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
