--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -15,7 +15,16 @@
                     <a class="nav-link" href="{{ path('wild_index') }}">Programs</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('category_add') }}">Catégories</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('program_index') }}">Series</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('season_index') }}">Saisons</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('episode_index') }}">Episodes</a>
                 </li>
             </ul>
         </div>
