--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -3,40 +3,43 @@
 {% block title %}Program index{% endblock %}
 
 {% block body %}
-    <h1>Program index</h1>
-    <div class="table-responsive-lxl">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Summary</th>
-                <th>Poster</th>
-                <th>actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for program in programs %}
+    <div class="container">
+
+        <h1>Program index</h1>
+        <a href="{{ path('program_new') }}" class="btn btn-info">Create new</a>
+
+        <div class="table-responsive-lxl">
+            <table class="table">
+                <thead>
                 <tr>
-                    <td>{{ program.id }}</td>
-                    <td>{{ program.title }}</td>
-                    <td>{{ program.summary }}</td>
-                    <td class="text-break">{{ program.poster }}</td>
-                    <td>
-                        <a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-primary">show</a>
-                        <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-secondary">edit</a>
-                    </td>
+                    <th>Id</th>
+                    <th>Title</th>
+                    <th>Summary</th>
+                    <th>Poster</th>
+                    <th>actions</th>
                 </tr>
-            {% else %}
-                <tr>
-                    <td colspan="5">no records found</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for program in programs %}
+                    <tr>
+                        <td>{{ program.id }}</td>
+                        <td>{{ program.title }}</td>
+                        <td>{{ program.summary }}</td>
+                        <td class="text-break">{{ program.poster }}</td>
+                        <td>
+                            <a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-primary">show</a>
+                            <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-secondary">edit</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 
-
-    <a href="{{ path('program_new') }}" class="btn btn-info">Create new</a>
 
 {% endblock %}
