--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Program{% endblock %}
 
 {% block body %}
-    <h1>Create new Program</h1>
+    <div class="container">
+        <h1>Create new Program</h1>
 
-    {{ include('program/_form.html.twig') }}
+        {{ include('program/_form.html.twig') }}
 
-    <a href="{{ path('program_index') }}">back to list</a>
+        <a href="{{ path('program_index') }}">back to list</a>
+    </div>
 {% endblock %}
