--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit Season{% endblock %}
 
 {% block body %}
-    <h1>Edit Season</h1>
+    <div class="container">
+        <h1>Edit Season</h1>
 
-    {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('season_index') }}">back to list</a>
+        <a href="{{ path('season_index') }}">back to list</a>
 
-    {{ include('season/_delete_form.html.twig') }}
+        {{ include('season/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
