--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Season{% endblock %}
 
 {% block body %}
-    <h1>Season</h1>
+    <div class="container">
+        <h1>Season</h1>
 
-    <table class="table">
-        <tbody>
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ season.id }}</td>
@@ -19,12 +20,13 @@
                 <th>Description</th>
                 <td>{{ season.description }}</td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <a href="{{ path('season_index') }}">back to list</a>
+        <a href="{{ path('season_index') }}">back to list</a>
 
-    <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
+        <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
 
-    {{ include('season/_delete_form.html.twig') }}
+        {{ include('season/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
