--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -26,8 +26,8 @@
                         <td>{{ episode.number }}</td>
                         <td>{{ episode.synopsis }}</td>
                         <td>
-                            <a href="{{ path('episode_show', {'id': episode.id}) }}" class="btn btn-primary">show</a>
-                            <a href="{{ path('episode_edit', {'id': episode.id}) }}" class="btn btn-secondary">edit</a>
+                            <a href="{{ path('episode_show', {'slug': episode.slug}) }}" class="btn btn-primary">show</a>
+                            <a href="{{ path('episode_edit', {'slug': episode.slug}) }}" class="btn btn-secondary">edit</a>
                         </td>
                     </tr>
                 {% else %}
