--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -22,8 +22,8 @@
                         <td>{{ actor.id }}</td>
                         <td>{{ actor.name }}</td>
                         <td>
-                            <a href="{{ path('actor_show', {'id': actor.id}) }}" class="btn btn-primary">show</a>
-                            <a href="{{ path('actor_edit', {'id': actor.id}) }}" class="btn btn-secondary">edit</a>
+                            <a href="{{ path('actor_show', {'slug': actor.slug}) }}" class="btn btn-primary">show</a>
+                            <a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-secondary">edit</a>
                         </td>
                     </tr>
                 {% else %}
