--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -27,8 +27,8 @@
                         <td>{{ program.summary }}</td>
                         <td class="text-break">{{ program.poster }}</td>
                         <td>
-                            <a href="{{ path('program_show', {'id': program.id}) }}" class="btn btn-primary">show</a>
-                            <a href="{{ path('program_edit', {'id': program.id}) }}" class="btn btn-secondary">edit</a>
+                            <a href="{{ path('program_show', {'slug': program.slug}) }}" class="btn btn-primary">show</a>
+                            <a href="{{ path('program_edit', {'slug': program.slug}) }}" class="btn btn-secondary">edit</a>
                         </td>
                     </tr>
                 {% else %}
