--- a/templates/wild/actor.html.twig
+++ b/templates/wild/actor.html.twig
@@ -13,7 +13,7 @@
                 <div class="col-lg-6">
                     <h3>{{ program.title }}</h3>
                     <p>{{ program.summary }}<br>
-                        <a href="{{ path('program_show', {id: program.id}) }}" class="btn btn-primary stretched-link">Voir la série</a>
+                        <a href="{{ path('program_show', {slug: program.slug}) }}" class="btn btn-primary stretched-link">Voir la série</a>
                     </p>
                 </div>
             </div>
