--- a/templates/actor/show.html.twig
+++ b/templates/actor/show.html.twig
@@ -23,7 +23,7 @@
 
     <a href="{{ path('actor_index') }}" class="btn btn-secondary">back to list</a>
 
-    <a href="{{ path('actor_edit', {'id': actor.id}) }}" class="btn btn-dark">edit</a>
+    <a href="{{ path('actor_edit', {'slug': actor.slug}) }}" class="btn btn-dark">edit</a>
 
     {{ include('actor/_delete_form.html.twig') }}
 </div>
