--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -29,6 +29,14 @@
                  <li class="nav-item">
                     <a class="nav-link" href="{{ path('actor_index') }}">Acteurs</a>
                 </li>
+                <li class="nav-item">
+                    {% if app.user %}
+                        {{ app.user.email }}
+                        <a class="nav-link" href="{{ path('app_logout') }}"> Se déconnecter</a>
+                    {% else %}
+                        <a class="nav-link" href="{{ path('app_login') }}"> Se connecter</a>
+                    {% endif %}
+                </li>
             </ul>
         </div>
     </div>
