--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -2,6 +2,13 @@
 
 {% block body %}
     <div class="container">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
         <h2>
             <a href="{{ path('wild_show_program', {programName: program.title|lower|replace({' ': '-'})}) }}">{{ program.title }}</a>
             <small class="text-muted"><a href="{{ path('wild_show_season', {'id' : season.id}) }}"
@@ -10,13 +17,22 @@
         <hr>
         <h2>{{ episode.title }} <small class="text-muted">Episode {{ episode.number }}</small></h2>
         <p>{{ episode.synopsis }}</p>
+        <h2>Laisser un commentaire :</h2>
         {% if is_granted('ROLE_SUBSCRIBER') %}
-            <div class="container">
-                <h2>Laisser un commentaire :</h2>
-                {{ form_start(commentForm) }}
-                {{ form_end(commentForm) }}
-
-            </div>
+            {{ form_start(commentForm) }}
+            {{ form_widget(commentForm) }}
+            <button type="submit" name="btnComment" class="btn btn-primary">Envoyer</button>
+            {{ form_end(commentForm) }}
+        {% else %}
+            <p>Vous devez être connecté.</p>
         {% endif %}
+        <div>
+            {% for comment in comments %}
+            <div class="card">
+                <p><em>De : {{ comment.author.pseudo }} | Note : {{ comment.rate }}</em></p>
+            <p>{{ comment.comment }}</p>
+            </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
