modifcation input de la note(rate) en type radion + mise en forme

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,11 +3,19 @@ $theme-colors: (
         "secondary": #2962ff
 );
 
-$headings-font-family:        'Work Sans', sans-serif !default;
-$font-family-sans-serif:      'Taviraj', serif, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$headings-font-family: 'Work Sans', sans-serif !default;
+$font-family-sans-serif: 'Taviraj', serif, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
-.actor-name{
+.actor-name {
   text-decoration: underline;
 }
+
+#comment_rate{
+  .form-check {
+    display: inline-block !important;
+    margin-right: 2rem;
+  }
+}
+
 
 @import "~bootstrap/scss/bootstrap";
