--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -27,8 +27,9 @@
             <p>Vous devez être connecté.</p>
         {% endif %}
         <div>
+            <h2>Commentaires :</h2>
             {% for comment in comments %}
-            <div class="card">
+            <div class="card my-3">
                 <p><em>De : {{ comment.author.pseudo }} | Note : {{ comment.rate }}</em></p>
             <p>{{ comment.comment }}</p>
             </div>
